fixed some weird uneven lines

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,11 @@ h3 {
   margin-left: 1.5%
 }
 
+.projtwo h4 {
+  margin-left: 1.5%
+
+}
+
 h4 {
   font-family:'Avenir', sans-serif;
   font-weight: normal;
@@ -61,9 +66,7 @@ h4 {
   margin-top: -1%;
 }
 
-.projtwo h4 {
-  margin-left: 1.5%
-}
+
 
 ul {
 	margin:0;
@@ -323,9 +326,7 @@ footer {
     -moz-column-width: 33%;
     column-width: inherit;
 }
-/* .projtwo {
-  padding-bottom: 10px;
-} */
+
 
 /* .footer {
   position: absolute;
